frontend/src/styles/navbar.css
nav hr {
    background-color: #ccc;
    border:none;
    padding:0;
    height:1px;
    margin:0;
}

.primary-nav {
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    /* padding: 16px; */
    padding:0.25rem 1rem 1px;
    align-items: center;
    box-sizing: border-box;
}
.primary-nav .nav-logo {
    padding: 14px 0;
    text-decoration:none;
    color: var(--color-dark-1);
}
.primary-nav .nav-item {
    padding: 14px 0.75rem;
    box-sizing: border-box;
    text-decoration:none;
    color: var(--color-dark-1);
    cursor: pointer;
    position: relative;
    bottom: -2px;
    border-bottom: 2px solid transparent;
}
.primary-nav .nav-item a {
    text-decoration:none;
    color: inherit;
}
.primary-nav .nav-item:hover {
    border-bottom: 2px solid var(--color-primary);
    color: var(--color-primary);
}

.primary-nav > div:last-child {
    display:flex;
    flex-direction: row;
    flex-wrap: nowrap;
}


.dropdown .dropdown-toggle {
    width:100%;
    height: 100%;
    box-sizing: border-box;
}
.dropdown .dropdown-menu {
    display:none;
    position:absolute;
    z-index: 30;
    top: 3.45rem;
    margin:0;
    padding:0;
    min-width: 7rem;
    list-style: none;
    background-color: var(--color-light-1);
    border:1px solid var(--color-light-3);
    border-radius: 3px;
}
.dropdown .dropdown-toggle:hover + .dropdown-menu {
    display:block;
}
.dropdown-menu:hover {
    display:block;
}
.dropdown-menu .dropdown-item {
    width:100%;
    box-sizing: border-box;
    background-color: var(--color-light-1);
}
.dropdown-menu .dropdown-item:hover, .logout-btn:hover {
    color: var(--color-light-1);
    background-color: var(--color-primary);

}

.dropdown-menu .dropdown-item a {
    width:100%;
    display: inline-block;
    padding:0.45rem 0.65rem;
    text-decoration:none;
    color: inherit;
}

.logout-btn {
    width:100%;
    border:none;
    background-color: transparent;
    font-size: 1rem;
    padding:0.45rem 0.65rem;
    text-align:left;
    cursor:pointer;

}
/*///////////////////////////////////////////////////////*/
.secondary-nav {
    position: relative;
    display:flex;
}
.secondary-nav .nav-item-list{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 1rem;
    overflow-y: hidden;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
    /* border-bottom: 1px solid #ccc; */
    scroll-behavior: smooth;
}
.secondary-nav .nav-item-list::-webkit-scrollbar {
    display: none;
}

.secondary-nav a {
    text-decoration:none;
    color: var(--color-dark-1);
    padding: 0.5rem;
    white-space: nowrap;
}
.secondary-nav a:hover {
    color: var(--color-primary);
}

.secondary-nav .nav-scroll {
    display:flex;
    flex-direction: column;
    justify-content: center;
    position:absolute;
    cursor:pointer;
    transition:color 0.1s ease;
    height:100%;
    padding:0 0.25rem;
    color:var(--color-dark-2);
    z-index:20;
}
.secondary-nav .nav-scroll:hover {
    color: var(--color-primary);
}
.secondary-nav .nav-scroll.left {
    left:1rem;
    background: linear-gradient(to right, #fff, #fff, #fff, #fff0);
    padding-right:0.85rem;
}

.secondary-nav .nav-scroll.right {
    right:1rem;
    background: linear-gradient(to left, #fff, #fff, #fff, #fff0);
    padding-left:0.85rem;
}

